--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "flexboxgrid2",
-  "version": "7.2.1",
+  "name": "flexboxgrid-sass",
+  "version": "1.0.0",
   "description": "Grid based off of CSS3 flexbox specification",
-  "style": "flexboxgrid2.css",
-  "main": "flexboxgrid2.css",
+  "style": "dist/flexboxgrid.css",
+  "main": "src/flexboxgrid.sass",
   "scripts": {
-    "build": "grunt",
-    "prepublish": "npm run build"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/evgenyrodionov/flexboxgrid2.git"
+    "url": "git://github.com/Borzik/flexboxgrid-sass.git"
   },
-  "keywords": ["browser", "flexbox", "grid", "css"],
-  "author": "@evgenyrodionov",
+  "keywords": [
+    "browser",
+    "flexbox",
+    "grid",
+    "css"
+  ],
+  "author": "@Borzik",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/evgenyrodionov/flexboxgrid2/issues"
+    "url": "https://github.com/Borzik/flexboxgrid-sass/issues"
   },
-  "files": ["flexboxgrid2.css", "flexboxgrid2.min.css", "src"],
+  "files": [
+    "dist/flexboxgrid.css",
+    "src"
+  ],
   "homepage": "https://github.com/evgenyrodionov/flexboxgrid2",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-contrib-cssmin": "^0.7.0",
-    "grunt-contrib-htmlmin": "^0.1.3",
-    "grunt-contrib-uglify": "^0.2.7",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-myth": "^1.0.1",
-    "grunt-processhtml": "^0.2.9"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1"
   },
   "dependencies": {
     "normalize.css": "^7.0.0"
